--- a/usuarios.html
+++ b/usuarios.html
@@ -6,17 +6,32 @@
     <meta charset="UTF-8">
     <title>Usuários de Teste via REST</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body class="bg-warning">
+
+    <header>
+        <nav>
+            <ul class="menu">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Contato</a></li>
+                <li><a href="#">Sobre</a></li>
+            </ul>
+        </nav>
+    </header>
+
+
+
+
     <div class="container">
         <h1>Usuários de Teste via REST</h1>
         <div id="usuarios" class="container-fluid">
             <div class="row">
                 <div v-for="(user, index) in users" :key="index" class="col-md-4 mb-3">
                     <div class="card p-2 m-3">
-                        <img class="card-img-top" :src="user.avatar" alt="Avatar">
+                        <img class="card-img-top":src="user.avatar" alt="Avatar">
                         <div class="card-body">
                             <h5 class="card-title">{{user.first_name}} {{user.last_name}}</h5>
                             <p class="card-text">{{user.email}}</p>
@@ -27,6 +42,9 @@
         </div>
     </div>
 
+    <footer>
+        <p><a href="https://github.com/CarlosBorges6158">&copy;Evelynn (Carlos) Borges</a>. Todos os direitos reservados | 2023 </p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
     <script src="script.js"></script>
